--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,8 @@ body.lock {
   -webkit-overflow: hidden;
   overflow: hidden;
 }
-
+.wrapper.active{
+  overflow: hidden; height: 100vh; position: relative;
 .wrapper {
   overflow: hidden;
   width: 100%;
