--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,10 @@ body.lock {
   overflow: hidden;
 }
 .wrapper.active{
-  overflow: hidden; height: 100vh; position: relative;
+  overflow: hidden; 
+  height: 100vh; 
+  position: relative;
+}
 .wrapper {
   overflow: hidden;
   width: 100%;
