--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,11 @@ body.lock {
   overflow: hidden;
   -webkit-overflow: hidden;
 }
+body.lock::-webkit-scrollbar{
+  -webkit-appearance:none;
+  width:0;
+  heaight:0;
+}
 
 .wrapper {
   overflow: hidden;
